{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 120,
  "lineage": "9fd73a96-f2f2-3971-b47b-4b9410377eae",
  "resources": [
    {
      "module": "module.pub_sg.module.app_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.pub_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:security-group/sg-0527886a8d3017084",
            "description": "Application security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS outbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0527886a8d3017084",
            "ingress": [],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_sg.module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "module.pub_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS outbound",
            "from_port": 443,
            "id": "sgrule-4142907390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0527886a8d3017084",
            "security_group_rule_id": "sgr-061dad77f57c7ed39",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pub_sg.module.app_sg.aws_security_group.this",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028488e778a7d4331",
            "arn": "arn:aws:ec2:us-east-1:088310115913:elastic-ip/eipalloc-028488e778a7d4331",
            "association_id": "eipassoc-0ac959cc64feef2df",
            "domain": "vpc",
            "id": "eipalloc-028488e778a7d4331",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0694f2734a61b6985",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-35-169-155-176.compute-1.amazonaws.com",
            "public_ip": "35.169.155.176",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:internet-gateway/igw-014504096a90e6a77",
            "id": "igw-014504096a90e6a77",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-igw"
            },
            "tags_all": {
              "Name": "ak-igw"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028488e778a7d4331",
            "association_id": "eipassoc-0ac959cc64feef2df",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a29fbd36d97aabea",
            "network_interface_id": "eni-0694f2734a61b6985",
            "private_ip": "10.0.1.155",
            "public_ip": "35.169.155.176",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0880c427863e8ab0b",
            "tags": {
              "Name": "ak-nat-gw"
            },
            "tags_all": {
              "Name": "ak-nat-gw"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_eip.nat_eip",
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:route-table/rtb-03dde98832b569ec1",
            "id": "rtb-03dde98832b569ec1",
            "owner_id": "088310115913",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a29fbd36d97aabea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ak-private-rt"
            },
            "tags_all": {
              "Name": "ak-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_eip.nat_eip",
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:route-table/rtb-0bd9ceaf01653be8d",
            "id": "rtb-0bd9ceaf01653be8d",
            "owner_id": "088310115913",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014504096a90e6a77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ak-public-rt"
            },
            "tags_all": {
              "Name": "ak-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rt_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2807c0c9f5b0a51",
            "region": "us-east-1",
            "route_table_id": "rtb-03dde98832b569ec1",
            "subnet_id": "subnet-054e6d14b0ffbaae3"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_eip.nat_eip",
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.vpc.module.ak_vpc.aws_route_table.pri_rt",
            "module.vpc.module.ak_vpc.aws_subnet.pri_subnet",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ba6a0e8891d470",
            "region": "us-east-1",
            "route_table_id": "rtb-03dde98832b569ec1",
            "subnet_id": "subnet-089e94a5d67f7d2dd"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_eip.nat_eip",
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_nat_gateway.nat_gw",
            "module.vpc.module.ak_vpc.aws_route_table.pri_rt",
            "module.vpc.module.ak_vpc.aws_subnet.pri_subnet",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c2479828f3b9580",
            "region": "us-east-1",
            "route_table_id": "rtb-0bd9ceaf01653be8d",
            "subnet_id": "subnet-0880c427863e8ab0b"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_route_table.pub_rt",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6787a232017292f",
            "region": "us-east-1",
            "route_table_id": "rtb-0bd9ceaf01653be8d",
            "subnet_id": "subnet-03a0fd3909198eae7"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_internet_gateway.igw",
            "module.vpc.module.ak_vpc.aws_route_table.pub_rt",
            "module.vpc.module.ak_vpc.aws_subnet.pub_subnet",
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-054e6d14b0ffbaae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e6d14b0ffbaae3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pri-subnet-1"
            },
            "tags_all": {
              "Name": "ak-pri-subnet-1"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-089e94a5d67f7d2dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089e94a5d67f7d2dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pri-subnet-2"
            },
            "tags_all": {
              "Name": "ak-pri-subnet-2"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-0880c427863e8ab0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0880c427863e8ab0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pub-subnet-1"
            },
            "tags_all": {
              "Name": "ak-pub-subnet-1"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:subnet/subnet-03a0fd3909198eae7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a0fd3909198eae7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088310115913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ak-pub-subnet-2"
            },
            "tags_all": {
              "Name": "ak-pub-subnet-2"
            },
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ak_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ak_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:vpc/vpc-08cad6259c41e7aa9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0848564f70837a56e",
            "default_route_table_id": "rtb-07c51adfc2305ebf0",
            "default_security_group_id": "sg-025ad56e3e7798bfa",
            "dhcp_options_id": "dopt-0cea2df4c794124ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cad6259c41e7aa9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c51adfc2305ebf0",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "ak-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ak-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.pub_sg.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.vpc.module.pub_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088310115913:security-group/sg-03e927275d6555229",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-03e927275d6555229",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg-new",
            "name_prefix": "",
            "owner_id": "088310115913",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08cad6259c41e7aa9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.pub_sg.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "module.vpc.module.pub_sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4220929339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-03e927275d6555229",
            "security_group_rule_id": "sgr-0810ff938ef4d6f6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ak_vpc.aws_vpc.ak_vpc",
            "module.vpc.module.pub_sg.module.alb_sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}